input component delivered

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudstry-ui-comp",
+  "name": "@cloudstrytech/cloudstry-ui-component",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
